# sports-analytics

./: explore.py  main.py  pyproject.toml
ingestion/: main.py
ingestion/loaders/: postgres.py
ingestion/sources/: nba_games.py  nba_players.py
sports_analytics/: dbt_project.yml
sports_analytics/models/marts/: team_power_rankings.sql
sports_analytics/models/staging/: _source.yml  _staging.yml  stg_games.sql
sports_analytics/tests/: assert_max_82_games_per_team.sql
