[project]
name = "sports-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dbt-postgres>=1.10.0",
    "nba-api>=1.11.4",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[tool.setuptools]
packages = ["ingestion", "ingestion.sources", "ingestion.loaders"]
